[gd_scene load_steps=3 format=3 uid="uid://bb7rok8xg3ixj"]

[ext_resource type="Script" uid="uid://pba2y4yt3go7" path="res://Utilities/InsanityScreen.gd" id="1_bib8b"]

[sub_resource type="LabelSettings" id="LabelSettings_wj15g"]

[node name="InsanityScreen" type="Node3D"]
script = ExtResource("1_bib8b")

[node name="InsanityScreenUI" type="Node2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="InsanityScreenUI"]
offset_left = -29.0
offset_top = -11.0
offset_right = 1937.0
offset_bottom = 1101.0
color = Color(0.0177324, 0.0177324, 0.0177324, 1)

[node name="Label" type="Label" parent="InsanityScreenUI"]
offset_left = 887.0
offset_top = 527.0
offset_right = 1015.0
offset_bottom = 550.0
text = "You went insane"
label_settings = SubResource("LabelSettings_wj15g")

[node name="Button" type="Button" parent="InsanityScreenUI"]
offset_left = 877.0
offset_top = 565.0
offset_right = 1036.0
offset_bottom = 610.0
text = "Retry"

[connection signal="pressed" from="InsanityScreenUI/Button" to="." method="_on_button_pressed"]
